assn7/src/test/resources/examples/type-err/071-if-int-int-int.calc
print if 8 then 5 else 2;
